[gd_scene load_steps=2 format=3 uid="uid://bokoikotidj57"]

[ext_resource type="Script" path="res://src/UI/Dialog Settings/Scripts/ChooseFaction.gd" id="1"]

[node name="ChooseFaction" type="Button" groups=["faction_access"]]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = -10.0
offset_right = 120.0
offset_bottom = 10.0
text = "Select Faction"
clip_text = true
script = ExtResource("1")

[node name="FactionFinder" type="PopupMenu" parent="."]

[connection signal="pressed" from="." to="." method="_on_ChooseFaction_pressed"]
[connection signal="id_pressed" from="FactionFinder" to="." method="_on_FactionFinder_id_pressed"]
